# swblas

./: .clang-format  CMakeLists.txt  README.md
benchmark_results/: results_test_dasum.txt  results_test_daxpy.txt  results_test_ddot.txt  results_test_dgemvcn.txt  results_test_dgemvct.txt  results_test_dnrm2.txt  results_test_dscal.txt  results_test_saxpy.txt  results_test_sdot.txt  results_test_snrm2.txt  results_test_sscal.txt
include/: blas_internal.h  dasum.h  daxpy.h  ddot.h  dgemvcn.h  dgemvct.h  dnrm2.h  dscal.h  saxpy.h  sdot.h  snrm2.h  sscal.h  swblas.h
src/: .gitignore  dasum.cpp  daxpy.cpp  ddot.cpp  dgemvcn.cpp  dgemvct.cpp  dnrm2.cpp  dscal.cpp  saxpy.cpp  sdot.cpp  snrm2.cpp  sscal.cpp
test/: CMakeLists.txt  test_dasum.cpp  test_daxpy.cpp  test_ddot.cpp  test_dgemvcn.cpp  test_dgemvct.cpp  test_dnrm2.cpp  test_dscal.cpp  test_run_and_redir_output.sh  test_saxpy.cpp  test_sdot.cpp  test_snrm2.cpp  test_sscal.cpp
